--- a/index.html
+++ b/index.html
@@ -546,9 +546,10 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <div class="container">
-            <h2>The Forge Calculator</h2>
-            <p>Master your weapon and armor crafting with The Forge Calculator - the ultimate tool for optimizing ore combinations and trait setups in The Forge Roblox game. Calculate forging probabilities, optimize ore combinations, and predict weapon and armor stats across World 1, 2, and 3 (The Peak).</p>
+    <div class="container">
+      <p>Master your weapon and armor crafting with The Forge Calculator - the ultimate tool for optimizing ore combinations and trait setups in The Forge Roblox game. Calculate forging probabilities, optimize ore combinations, and predict weapon and armor stats across World 1, 2, and 3 (The Peak).</p>
+      <div class="grid">
+            </div>
         </div>
     </section>
 
