--- a/ore/mythril.html
+++ b/ore/mythril.html
@@ -446,48 +446,110 @@
         <div class="content-section">
             <h2>⚖️ Mythril vs Other Legendary Ores</h2>
             
-            <div class="table-overflow">
-                <table class="official-table">
-                    <thead>
-                        <tr>
-                            <th>Ore Name</th>
-                            <th>Spawn Rate</th>
-                            <th>Multiplier</th>
-                            <th>Price</th>
-                            <th>Special Trait</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Mythril</td>
-                            <td>1/813</td>
-                            <td>3.5x</td>
-                            <td>52.5$</td>
-                            <td>15% extra defense on Armor</td>
-                        </tr>
-                        <tr>
-                            <td>Uranium</td>
-                            <td>1/777</td>
-                            <td>3x</td>
-                            <td>66$</td>
-                            <td>5% max HP AOE dmg on Armor</td>
-                        </tr>
-                        <tr>
-                            <td>Eye Ore</td>
-                            <td>1/1333</td>
-                            <td>4x</td>
-                            <td>37.5$</td>
-                            <td>-10% HP, +15% dmg</td>
-                        </tr>
-                        <tr>
-                            <td>Fireite</td>
-                            <td>1/2187</td>
-                            <td>4.5x</td>
-                            <td>67.5$</td>
-                            <td>20% burn chance on Weapons</td>
-                        </tr>
-                    </tbody>
-                </table>
+            <div class="features-grid">
+                <!-- Mythril -->
+                <div class="feature-card">
+                    <div class="card-header">
+                        <h3>Mythril</h3>
+                        <span class="rarity-legendary card-badge">1/813</span>
+                    </div>
+                    <div class="card-body">
+                        <div class="card-icon">💜</div>
+                        <p>Best balance of defensive capabilities.</p>
+                    </div>
+                    <div class="card-stats-grid">
+                        <div class="stat-box">
+                            <span class="stat-label">Multiplier</span>
+                            <span class="stat-value">3.5x</span>
+                        </div>
+                        <div class="stat-box">
+                            <span class="stat-label">Price</span>
+                            <span class="stat-value">$52.5</span>
+                        </div>
+                        <div class="stat-box">
+                            <span class="stat-label">Trait</span>
+                            <span class="stat-value">15% Defense</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Uranium -->
+                <div class="feature-card">
+                    <div class="card-header">
+                        <h3>Uranium</h3>
+                        <span class="rarity-legendary card-badge">1/777</span>
+                    </div>
+                    <div class="card-body">
+                        <div class="card-icon">☢️</div>
+                        <p>Dangerous ore with AOE capabilities.</p>
+                    </div>
+                    <div class="card-stats-grid">
+                        <div class="stat-box">
+                            <span class="stat-label">Multiplier</span>
+                            <span class="stat-value">3x</span>
+                        </div>
+                        <div class="stat-box">
+                            <span class="stat-label">Price</span>
+                            <span class="stat-value">$66</span>
+                        </div>
+                        <div class="stat-box">
+                            <span class="stat-label">Trait</span>
+                            <span class="stat-value">AOE DMG</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Eye Ore -->
+                <div class="feature-card">
+                    <div class="card-header">
+                        <h3>Eye Ore</h3>
+                        <span class="rarity-legendary card-badge">1/1333</span>
+                    </div>
+                    <div class="card-body">
+                        <div class="card-icon">👁️</div>
+                        <p>High risk, high reward damage dealer.</p>
+                    </div>
+                    <div class="card-stats-grid">
+                        <div class="stat-box">
+                            <span class="stat-label">Multiplier</span>
+                            <span class="stat-value">4x</span>
+                        </div>
+                        <div class="stat-box">
+                            <span class="stat-label">Price</span>
+                            <span class="stat-value">$37.5</span>
+                        </div>
+                        <div class="stat-box">
+                            <span class="stat-label">Trait</span>
+                            <span class="stat-value">+DMG -HP</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Fireite -->
+                <div class="feature-card">
+                    <div class="card-header">
+                        <h3>Fireite</h3>
+                        <span class="rarity-legendary card-badge">1/2187</span>
+                    </div>
+                    <div class="card-body">
+                        <div class="card-icon">🔥</div>
+                        <p>Extremely rare ore with burn effects.</p>
+                    </div>
+                    <div class="card-stats-grid">
+                        <div class="stat-box">
+                            <span class="stat-label">Multiplier</span>
+                            <span class="stat-value">4.5x</span>
+                        </div>
+                        <div class="stat-box">
+                            <span class="stat-label">Price</span>
+                            <span class="stat-value">$67.5</span>
+                        </div>
+                        <div class="stat-box">
+                            <span class="stat-label">Trait</span>
+                            <span class="stat-value">Burn</span>
+                        </div>
+                    </div>
+                </div>
             </div>
             
             <p>
