--- a/ore/stone.html
+++ b/ore/stone.html
@@ -457,48 +457,110 @@
         <div class="content-section">
             <h2>⚖️ Stone vs Other Common Ores</h2>
             
-            <div class="table-overflow">
-                <table class="official-table">
-                    <thead>
-                        <tr>
-                            <th>Ore Name</th>
-                            <th>Spawn Rate</th>
-                            <th>Multiplier</th>
-                            <th>Price</th>
-                            <th>Rock Type</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Stone</td>
-                            <td>1/1 (100%)</td>
-                            <td>0.2x</td>
-                            <td>3$</td>
-                            <td>Pebble</td>
-                        </tr>
-                        <tr>
-                            <td>Sand Stone</td>
-                            <td>1/2 (50%)</td>
-                            <td>0.25x</td>
-                            <td>3.75$</td>
-                            <td>Pebble, Rock</td>
-                        </tr>
-                        <tr>
-                            <td>Copper</td>
-                            <td>1/3 (33%)</td>
-                            <td>0.3x</td>
-                            <td>4.5$</td>
-                            <td>Pebble, Rock, Boulder</td>
-                        </tr>
-                        <tr>
-                            <td>Iron</td>
-                            <td>1/5 (20%)</td>
-                            <td>0.35x</td>
-                            <td>5.25$</td>
-                            <td>Pebble, Rock, Boulder</td>
-                        </tr>
-                    </tbody>
-                </table>
+            <div class="features-grid">
+                <!-- Stone -->
+                <div class="feature-card">
+                    <div class="card-header">
+                        <h3>Stone</h3>
+                        <span class="rarity-common card-badge">1/1</span>
+                    </div>
+                    <div class="card-body">
+                        <div class="card-icon">🪨</div>
+                        <p>The most reliable choice for beginners.</p>
+                    </div>
+                    <div class="card-stats-grid">
+                        <div class="stat-box">
+                            <span class="stat-label">Multiplier</span>
+                            <span class="stat-value">0.2x</span>
+                        </div>
+                        <div class="stat-box">
+                            <span class="stat-label">Price</span>
+                            <span class="stat-value">$3</span>
+                        </div>
+                        <div class="stat-box">
+                            <span class="stat-label">Rock Type</span>
+                            <span class="stat-value">Pebble</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Sand Stone -->
+                <div class="feature-card">
+                    <div class="card-header">
+                        <h3>Sand Stone</h3>
+                        <span class="rarity-common card-badge">1/2</span>
+                    </div>
+                    <div class="card-body">
+                        <div class="card-icon">🏜️</div>
+                        <p>Slightly better stats, still common.</p>
+                    </div>
+                    <div class="card-stats-grid">
+                        <div class="stat-box">
+                            <span class="stat-label">Multiplier</span>
+                            <span class="stat-value">0.25x</span>
+                        </div>
+                        <div class="stat-box">
+                            <span class="stat-label">Price</span>
+                            <span class="stat-value">$3.75</span>
+                        </div>
+                        <div class="stat-box">
+                            <span class="stat-label">Rock Type</span>
+                            <span class="stat-value">Pebble, Rock</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Copper -->
+                <div class="feature-card">
+                    <div class="card-header">
+                        <h3>Copper</h3>
+                        <span class="rarity-uncommon card-badge">1/3</span>
+                    </div>
+                    <div class="card-body">
+                        <div class="card-icon">🥉</div>
+                        <p>A good step up from basic stone.</p>
+                    </div>
+                    <div class="card-stats-grid">
+                        <div class="stat-box">
+                            <span class="stat-label">Multiplier</span>
+                            <span class="stat-value">0.3x</span>
+                        </div>
+                        <div class="stat-box">
+                            <span class="stat-label">Price</span>
+                            <span class="stat-value">$4.5</span>
+                        </div>
+                        <div class="stat-box">
+                            <span class="stat-label">Rock Type</span>
+                            <span class="stat-value">All</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Iron -->
+                <div class="feature-card">
+                    <div class="card-header">
+                        <h3>Iron</h3>
+                        <span class="rarity-uncommon card-badge">1/5</span>
+                    </div>
+                    <div class="card-body">
+                        <div class="card-icon">⚙️</div>
+                        <p>Essential for mid-game crafting.</p>
+                    </div>
+                    <div class="card-stats-grid">
+                        <div class="stat-box">
+                            <span class="stat-label">Multiplier</span>
+                            <span class="stat-value">0.35x</span>
+                        </div>
+                        <div class="stat-box">
+                            <span class="stat-label">Price</span>
+                            <span class="stat-value">$5.25</span>
+                        </div>
+                        <div class="stat-box">
+                            <span class="stat-label">Rock Type</span>
+                            <span class="stat-value">All</span>
+                        </div>
+                    </div>
+                </div>
             </div>
             
             <p>
