--- a/ru/index.html
+++ b/ru/index.html
@@ -108,13 +108,13 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <h2>Калькулятор The Forge</h2>
+            <h2>Освойте Искусство Ковки</h2>
             <p>Освойте создание оружия и брони с помощью Калькулятора The Forge - комплексного инструмента, который поможет вам оптимизировать комбинации руд и настройки характеристик в игре The Forge Roblox. Независимо от того, новичок ли вы в системе ковки или опытный игрок, совершенствующий свои сборки, наш калькулятор The Forge предоставляет расчеты в реальном времени для всех ваших потребностей в крафте.</p>
         </div>
     </section>
 
     <!-- Calculator Section -->
-    <section id="calculator" class="calculator" class="calculator-section">
+    <section id="calculator" class="calculator-section">
 
         
         <div id="forge-calculator-container">
@@ -125,7 +125,6 @@
         <script src="../js/forge-calculator-data-full.js"></script>
         <script src="../js/forge-calculator-core.js"></script>
         <script src="../js/forge-calculator-ui.js"></script>
-        <link rel="stylesheet" href="../js/forge-calculator.css">
         
         <script>
             // Initialize the calculator when the page loads
@@ -202,37 +201,37 @@
     <!-- What Is Section -->
     <section id="what-is" class="content-section">
         <div class="container">
-            <h2>What is калькулятор the forge?</h2>
-            <p>калькулятор the forge is an all-in-one tool designed specifically for players forging weapons and armor in The Forge on Roblox. Our comprehensive forge calculator helps you determine optimal ore combinations and trait setups without manual calculations. Whether you're a beginner learning the forging system or an experienced player seeking optimal builds, калькулятор the forge takes the guesswork out of crafting.</p>
-            <p>Skip the tedious math of figuring out which ores give you the strongest modifiers or how many you need for maximum trait percentages. Our Roblox Forge calculator instantly processes your ore selections and displays real-time results. The Roblox Forge Calculator reveals your weapon or armor class, optimal ore quantities, final modifier multipliers, and trait activation status.</p>
-            <p>When adding ores to The Roblox Forge Calculator tool, you'll see how strong the applied traits will be and the optimal number of ores needed to increase chances of crafting a specific weapon or armor set. Our Roblox Forge calculator interface is intuitive and user-friendly, making it accessible for all players looking to optimize their forging strategy.</p>
+            <h2>Что такое Калькулятор The Forge?</h2>
+            <p>Калькулятор The Forge - это универсальный инструмент, разработанный специально для игроков, создающих оружие и броню в The Forge на Roblox. Наш комплексный калькулятор помогает определить оптимальные комбинации руд и настройки характеристик без ручных расчетов. Будь вы новичок, изучающий систему ковки, или опытный игрок, ищущий оптимальные сборки, Калькулятор The Forge упрощает процесс крафта.</p>
+            <p>Забудьте о сложной математике при выборе руд для получения сильнейших модификаторов или расчете количества для максимального процента характеристик. Наш калькулятор Roblox Forge мгновенно обрабатывает ваш выбор руд и показывает результаты в реальном времени. Калькулятор раскрывает класс вашего оружия или брони, оптимальное количество руд, финальные множители и статус активации характеристик.</p>
+            <p>При добавлении руд в инструмент Калькулятор The Forge вы увидите силу применяемых характеристик и оптимальное количество руд, необходимых для повышения шансов крафта определенного набора оружия или брони. Интерфейс нашего калькулятора интуитивно понятен и удобен, делая его доступным для всех игроков, желающих оптимизировать свою стратегию ковки.</p>
         </div>
     </section>
 
     <!-- How To Section -->
     <section id="how-to" class="content-section">
         <div class="container">
-            <h2>How to Use калькулятор the forge</h2>
-            <p>Using калькулятор the forge is straightforward and designed to save you time when forging weapons and armor in Roblox. Follow these simple steps to optimize your crafting strategy:</p>
+            <h2>Как использовать Калькулятор The Forge</h2>
+            <p>Использование Калькулятора The Forge просто и создано для экономии вашего времени при ковке оружия и брони в Roblox. Следуйте этим простым шагам для оптимизации вашей стратегии крафта:</p>
             <ul>
-                <li><strong>Add Your Ores:</strong> Input the ores you plan to use in калькулятор the forge. The tool will process your ore combinations instantly.</li>
-                <li><strong>View Weapon/Armor Class:</strong> калькулятор the forge shows which weapon or armor class you'll craft based on your ore selection.</li>
-                <li><strong>Check Optimal Amounts:</strong> Our forge calculator displays the optimal ore amounts needed for your desired craft and trait percentages.</li>
-                <li><strong>Review Modifiers:</strong> See final modifier multipliers calculated by калькулятор the forge to understand your craft's potential strength.</li>
-                <li><strong>Verify Trait Activation:</strong> The forge calculator indicates whether ore traits will be active and how strong the applied traits will be.</li>
-                <li><strong>Optimize Build:</strong> Use калькулятор the forge to experiment with different ore combinations and find the optimal setup for your weapon or armor.</li>
+                <li><strong>Добавьте Руды:</strong> Введите руды, которые планируете использовать, в Калькулятор The Forge. Инструмент мгновенно обработает комбинации.</li>
+                <li><strong>Проверьте Класс:</strong> Калькулятор покажет, какой класс оружия или брони вы создадите на основе выбора руд.</li>
+                <li><strong>Узнайте Оптимальное Количество:</strong> Наш калькулятор отображает оптимальное количество руд для желаемого крафта и процента характеристик.</li>
+                <li><strong>Изучите Модификаторы:</strong> Смотрите финальные множители, рассчитанные калькулятором, чтобы понять потенциальную силу крафта.</li>
+                <li><strong>Проверьте Характеристики:</strong> Калькулятор показывает, будут ли активны характеристики руд и насколько сильными они будут.</li>
+                <li><strong>Оптимизируйте Сборку:</strong> Используйте Калькулятор The Forge для экспериментов с различными комбинациями и поиска идеальной настройки.</li>
             </ul>
-            <p>калькулятор the forge presents results in real time as you adjust your ore inputs. You can experiment with different combinations using our forge calculator before committing resources in The Forge, ensuring you achieve the best possible modifiers and trait setups for your builds.</p>
+            <p>Калькулятор The Forge представляет результаты в реальном времени по мере настройки ввода руд. Вы можете экспериментировать с различными комбинациями перед тратой ресурсов в игре, гарантируя получение лучших модификаторов и настроек характеристик.</p>
         </div>
     </section>
 
     <!-- Why Section -->
     <section id="why" class="content-section">
         <div class="container">
-            <h2>Why Use калькулятор the forge?</h2>
-            <p>The Forge Roblox game has intricate forging mechanics with complex ore combinations and trait systems. калькулятор the forge solves this complexity by providing instant, accurate calculations that help you make informed decisions about your weapon and armor builds without manual calculations.</p>
-            <p>Without The Roblox Forge Calculator, players waste valuable time manually calculating which ore combinations grant the best modifiers or determining the number of ores needed for optimal trait percentages. Our Roblox Forge calculator eliminates these frustrations by processing your inputs and presenting results in real time, showing you exactly which weapon or armor class you'll craft and how strong your traits will be.</p>
-            <p>калькулятор the forge is particularly valuable for players seeking optimal builds and trait setups. Whether you're a beginner enhancing your knowledge of the forging system or an experienced player optimizing modifier multipliers, our forge calculator acts as your personal forging assistant. By using калькулятор the forge, you can experiment with different ore combinations, verify trait activation, and ensure you achieve the best possible results before committing resources in The Forge.</p>
+            <h2>Зачем использовать Калькулятор The Forge?</h2>
+            <p>Игра The Forge в Roblox имеет сложную механику ковки с запутанными комбинациями руд и системами характеристик. Калькулятор The Forge решает эту сложность, предоставляя мгновенные и точные расчеты, помогающие принимать обоснованные решения о сборках оружия и брони без ручных вычислений.</p>
+            <p>Без Калькулятора The Forge игроки тратят ценное время на ручные расчеты лучших комбинаций руд или определение количества руд для оптимальных процентов. Наш калькулятор устраняет эти неудобства, обрабатывая ваши данные и показывая результаты в реальном времени: какой класс оружия или брони вы создадите и насколько сильными будут ваши характеристики.</p>
+            <p>Калькулятор The Forge особенно ценен для игроков, ищущих оптимальные сборки и настройки характеристик. Будь вы новичок, улучшающий знания о системе ковки, или опытный игрок, оптимизирующий множители, наш калькулятор станет вашим личным помощником. Используя Калькулятор The Forge, вы можете экспериментировать с комбинациями, проверять активацию характеристик и гарантировать лучшие результаты перед тратой ресурсов.</p>
         </div>
     </section>
 
