--- a/wiki/fungi.html
+++ b/wiki/fungi.html
@@ -64,61 +64,6 @@
         "dateModified": "2024-01-26"
     }
     </script>
-
-    <style>
-        .shop-table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 1rem;
-            background: rgba(0, 0, 0, 0.3);
-            border-radius: 8px;
-            overflow: hidden;
-            border: 1px solid rgba(255, 255, 255, 0.1);
-        }
-        .shop-table th, .shop-table td {
-            padding: 12px 16px;
-            text-align: left;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-        }
-        .shop-table th {
-            background: rgba(255, 255, 255, 0.1);
-            color: var(--primary-color);
-            font-family: 'Orbitron', sans-serif;
-            text-transform: uppercase;
-            font-size: 0.85rem;
-            letter-spacing: 1px;
-        }
-        .shop-table tr:hover {
-            background: rgba(255, 255, 255, 0.05);
-        }
-        .item-name {
-            font-weight: 700;
-            color: #fff;
-        }
-        .item-type {
-            color: #aaa;
-            font-size: 0.9em;
-        }
-        .item-price {
-            color: #4caf50;
-            font-family: 'JetBrains Mono', monospace;
-            font-weight: 600;
-        }
-        .item-stats {
-            font-size: 0.9em;
-            color: #ddd;
-        }
-        .highlight-text {
-            color: var(--primary-color);
-            font-weight: bold;
-        }
-        @media (max-width: 768px) {
-            .shop-table th, .shop-table td {
-                padding: 8px 10px;
-                font-size: 0.9em;
-            }
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -142,10 +87,10 @@
 
     <div class="container">
         <!-- Breadcrumbs -->
-        <div style="margin: 20px 0; font-size: 0.9em; color: #888;">
-            <a href="/" style="color: #888; text-decoration: none;">Home</a> &gt; 
-            <a href="/wiki" style="color: #888; text-decoration: none;">Wiki</a> &gt; 
-            <span style="color: #fff;">Fungi</span>
+        <div class="breadcrumb">
+            <a href="/">Home</a> <span>›</span>
+            <a href="/wiki">Wiki</a> <span>›</span>
+            <span>Fungi</span>
         </div>
 
         <div class="hero">
@@ -159,7 +104,7 @@
                 <h3>📜 Fungi Overview</h3>
                 <div class="npc-card">
                     <div class="npc-info">
-                        <p><strong>📍 Location:</strong> Hidden Maze on <span class="highlight-text">Iceberg Island</span> (Requires Ferry from Frostspire Expanse)</p>
+                        <p><strong>📍 Location:</strong> Hidden Maze on <span class="text-highlight">Iceberg Island</span> (Requires Ferry from Frostspire Expanse)</p>
                         <p><strong>🎟️ Entry Cost:</strong> 1 Coinite Ore (Pay to Ferry Captain)</p>
                         <p><strong>🔄 Spawn Logic:</strong> Fungi's location within the Secret Maze changes every day.</p>
                         <p><strong>🎯 Role:</strong> Fungi serves as a Merchant (Unique Potions & Weapon Blueprints)</p>
@@ -180,8 +125,8 @@
             <h3>🛒 Fungi's Shop Inventory</h3>
             <p>Curious about today's <strong>Fungi Shop Stock</strong>? While the shop inventory is <strong>randomized daily</strong>, Fungi only displays a selection of <strong>5 items</strong> from the complete pool below each day. Check the full list to see what you might find!</p>
             
-            <div style="overflow-x: auto;">
-                <table class="shop-table">
+            <div class="table-overflow">
+                <table>
                     <thead>
                         <tr>
                             <th>Item Name</th>
@@ -193,99 +138,100 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td class="item-name">Fungi's Potion</td>
-                            <td class="item-type">Potion</td>
-                            <td class="item-price">$17,500</td>
-                            <td class="item-stock">6</td>
-                            <td class="item-stats">+20% Mining Speed, +15% Mining DMG, +15% Luck</td>
+                            <td class="weapon-name">Fungi's Potion</td>
+                            <td>Potion</td>
+                            <td class="price">$17,500</td>
+                            <td>6</td>
+                            <td>+20% Mining Speed, +15% Mining DMG, +15% Luck</td>
                         </tr>
                         <tr>
-                            <td class="item-name">Cultist Dagger</td>
-                            <td class="item-type">Dagger Blueprint</td>
-                            <td class="item-price">$68,000</td>
-                            <td class="item-stock">1</td>
-                            <td class="item-stats">5.25 Damage, 0.35s Speed</td>
+                            <td class="weapon-name">Cultist Dagger</td>
+                            <td>Dagger Blueprint</td>
+                            <td class="price">$68,000</td>
+                            <td>1</td>
+                            <td>5.25 Damage, 0.35s Speed</td>
                         </tr>
                         <tr>
-                            <td class="item-name">Shark's Fangs</td>
-                            <td class="item-type">Dagger Blueprint</td>
-                            <td class="item-price">$80,000</td>
-                            <td class="item-stock">1</td>
-                            <td class="item-stats">3.87 Damage, 0.27s Speed</td>
+                            <td class="weapon-name">Shark's Fangs</td>
+                            <td>Dagger Blueprint</td>
+                            <td class="price">$80,000</td>
+                            <td>1</td>
+                            <td>3.87 Damage, 0.27s Speed</td>
                         </tr>
                         <tr>
-                            <td class="item-name">Curved Dagger</td>
-                            <td class="item-type">Dagger Blueprint</td>
-                            <td class="item-price">$68,000</td>
-                            <td class="item-stock">1</td>
-                            <td class="item-stats">4.95 Damage, 0.3s Speed</td>
+                            <td class="weapon-name">Curved Dagger</td>
+                            <td>Dagger Blueprint</td>
+                            <td class="price">$68,000</td>
+                            <td>1</td>
+                            <td>4.95 Damage, 0.3s Speed</td>
                         </tr>
                         <tr>
-                            <td class="item-name">Hook Blade</td>
-                            <td class="item-type">Straight Sword Blueprint</td>
-                            <td class="item-price">$140,000</td>
-                            <td class="item-stock">1</td>
-                            <td class="item-stats">8.25 Damage, 0.44s Speed</td>
+                            <td class="weapon-name">Hook Blade</td>
+                            <td>Straight Sword Blueprint</td>
+                            <td class="price">$140,000</td>
+                            <td>1</td>
+                            <td>8.25 Damage, 0.44s Speed</td>
                         </tr>
                         <tr>
-                            <td class="item-name">Crystallized Broadsword</td>
-                            <td class="item-type">Straight Sword Blueprint</td>
-                            <td class="item-price">$290,000</td>
-                            <td class="item-stock">1</td>
-                            <td class="item-stats">9.975 Damage, 0.62s Speed</td>
+                            <td class="weapon-name">Crystallized Broadsword</td>
+                            <td>Straight Sword Blueprint</td>
+                            <td class="price">$290,000</td>
+                            <td>1</td>
+                            <td>9.975 Damage, 0.62s Speed</td>
                         </tr>
                         <tr>
-                            <td class="item-name">Dark Knight's Gauntlets</td>
-                            <td class="item-type">Gauntlet Blueprint</td>
-                            <td class="item-price">$200,000</td>
-                            <td class="item-stock">1</td>
-                            <td class="item-stats">10 Damage, 0.47s Speed</td>
+                            <td class="weapon-name">Dark Knight's Gauntlets</td>
+                            <td>Gauntlet Blueprint</td>
+                            <td class="price">$200,000</td>
+                            <td>1</td>
+                            <td>10 Damage, 0.47s Speed</td>
                         </tr>
                         <tr>
-                            <td class="item-name">Straight Edge Katana</td>
-                            <td class="item-type">Katana Blueprint</td>
-                            <td class="item-price">$230,000</td>
-                            <td class="item-stock">1</td>
-                            <td class="item-stats">9.35 Damage, 0.6s Speed</td>
+                            <td class="weapon-name">Straight Edge Katana</td>
+                            <td>Katana Blueprint</td>
+                            <td class="price">$230,000</td>
+                            <td>1</td>
+                            <td>9.35 Damage, 0.6s Speed</td>
                         </tr>
                         <tr>
-                            <td class="item-name">Ornate Short Axe</td>
-                            <td class="item-type">Axe Blueprint</td>
-                            <td class="item-price">$205,000</td>
-                            <td class="item-stock">1</td>
-                            <td class="item-stats">8.4 Damage, 0.48s Speed</td>
+                            <td class="weapon-name">Ornate Short Axe</td>
+                            <td>Axe Blueprint</td>
+                            <td class="price">$205,000</td>
+                            <td>1</td>
+                            <td>8.4 Damage, 0.48s Speed</td>
                         </tr>
                         <tr>
-                            <td class="item-name">Anchored Greatsword</td>
-                            <td class="item-type">Great Sword Blueprint</td>
-                            <td class="item-price">$440,000</td>
-                            <td class="item-stock">1</td>
-                            <td class="item-stats">13.8 Damage, 0.91s Speed</td>
+                            <td class="weapon-name">Anchored Greatsword</td>
+                            <td>Great Sword Blueprint</td>
+                            <td class="price">$440,000</td>
+                            <td>1</td>
+                            <td>13.8 Damage, 0.91s Speed</td>
                         </tr>
                         <tr>
-                            <td class="item-name">Dark Knight's Greatsword</td>
-                            <td class="item-type">Great Sword Blueprint</td>
-                            <td class="item-price">$485,000</td>
-                            <td class="item-stock">1</td>
-                            <td class="item-stats">15 Damage, 1.11s Speed</td>
+                            <td class="weapon-name">Dark Knight's Greatsword</td>
+                            <td>Great Sword Blueprint</td>
+                            <td class="price">$485,000</td>
+                            <td>1</td>
+                            <td>15 Damage, 1.11s Speed</td>
                         </tr>
                         <tr>
-                            <td class="item-name">Colossal Terrorblade</td>
-                            <td class="item-type">Colossal Sword Blueprint</td>
-                            <td class="item-price">$470,000</td>
-                            <td class="item-stock">1</td>
-                            <td class="item-stats">22 Damage, 1.02s Speed</td>
+                            <td class="weapon-name">Colossal Terrorblade</td>
+                            <td>Colossal Sword Blueprint</td>
+                            <td class="price">$470,000</td>
+                            <td>1</td>
+                            <td>22 Damage, 1.02s Speed</td>
                         </tr>
                         <tr>
-                            <td class="item-name">Colossal Gemblade</td>
-                            <td class="item-type">Colossal Sword Blueprint</td>
-                            <td class="item-price">$500,000</td>
-                            <td class="item-stock">1</td>
-                            <td class="item-stats">23 Damage, 1.12s Speed</td>
+                            <td class="weapon-name">Colossal Gemblade</td>
+                            <td>Colossal Sword Blueprint</td>
+                            <td class="price">$500,000</td>
+                            <td>1</td>
+                            <td>23 Damage, 1.12s Speed</td>
                         </tr>
                     </tbody>
                 </table>
             </div>
+        </div>
         </div>
         
         <!-- Tips -->
