--- a/wiki/npcs.html
+++ b/wiki/npcs.html
@@ -152,7 +152,7 @@
 
         <!-- Fungi -->
         <div class="content-section">
-            <h3><a href="/wiki/fungi" style="text-decoration: none; color: inherit;">Fungi</a></h3>
+            <h3><a href="/wiki/fungi">Fungi</a></h3>
             <div class="npc-card">
                 <div class="npc-icon">🍄</div>
                 <h4>Rare Blueprint Merchant</h4>
